# etl

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  env.example  pyproject.toml  run_sql.py
config/: databases.yaml
data/005ATS_ERP_BI/: clientes.parquet  consultor.parquet  estoque.parquet  lojas.parquet  produtos.parquet  vendas.parquet
data/005NO_ERP_BI/: consultor.parquet  lojas.parquet  meta_fun.parquet  metas_emp.parquet
data/005RG_ERP_BI/: clientes.parquet  consultor.parquet  lojas.parquet  produtos.parquet
data/006GF_BI/: consultor.parquet  lojas.parquet  meta_fun.parquet  metas_emp.parquet
data/007BE_ERP_BI/: consultor.parquet  estoque.parquet  lojas.parquet  meta_fun.parquet  metas_emp.parquet
data/008GT_BI/: consultor.parquet  lojas.parquet  meta_fun.parquet  metas_emp.parquet
data/012ARR_ERP_BI/: clientes.parquet  consultor.parquet  estoque.parquet  lojas.parquet  meta_fun.parquet  metas_emp.parquet  produtos.parquet  vendas.parquet
data/012DIPUA_ERP_BI/: consultor.parquet  estoque.parquet  lojas.parquet  meta_fun.parquet  metas_emp.parquet  produtos.parquet
data/013BW_ERP_BI/: clientes.parquet  consultor.parquet  estoque.parquet  lojas.parquet  produtos.parquet  vendas.parquet
data/013CRO_ERP_BI/: clientes.parquet  consultor.parquet  estoque.parquet  lojas.parquet  produtos.parquet
data/014CST_ERP_BI/: clientes.parquet  (+6 more)
sql/: clientes.sql  consultor.sql  estoque.sql  lojas.sql  meta_fun.sql  metas_emp.sql  produtos.sql  vendas.sql
utils/: ftp_uploader.py  send_file.py  sql_query.py  upload_supabase.py
(+26 files in other folders)
