[project]
name = "etl"
version = "0.1.0"
description = "Sistema ETL para extração de dados de SQL Server e upload para FTP"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "pyyaml>=6.0.3",
    "pyarrow>=21.0.0",
    "pyodbc>=5.2.0",
    "paramiko>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "PySocks>=1.7.1",
    "requests>=2.31.0",
    "supabase>=2.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.10.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "config", "sql"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

